--- a/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
@@ -502,7 +502,30 @@ parameters:
     default: 5.1.5
 
 resources:
-  kube-network:
-    type: OS::Neutron::Net
+  network:
+    type: ../../common/templates/network.yaml
+    properties:
+      existing_network: {get_param: fixed_network}
+      existing_subnet: {get_param: fixed_subnet}
+      private_network_cidr: {get_param: fixed_network_cidr}
+      dns_nameserver: {get_param: dns_nameserver}
+      external_network: {get_param: external_network}
+      private_network_name: private
+
+  api_lb:
+    type: ../../common/templates/lb.yaml
+    properties:
+      fixed_subnet: {get_attr: [network, fixed_subnet]}
+      external_network: {get_param: external_network}
+      protocol: {get_param: loadbalancing_protocol}
+      port: {get_param: kubernetes_port}
+
+  etcd_lb:
+    type: ../../common/templates/lb.yaml
+    properties:
+      fixed_subnet: {get_attr: [network, fixed_subnet]}
+      external_network: {get_param: external_network}
+      protocol: {get_param: loadbalancing_protocol}
+      port: 2379
 
 outputs:
