--- a/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
@@ -702,6 +702,7 @@ resources:
     type: OS::Heat::SoftwareDeployment
     properties:
       actions: ['CREATE']
+      signal_transport: HEAT_SIGNAL
       config:
         get_resource: kube_cluster_config
       server:
