--- a/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
@@ -3,7 +3,6 @@ heat_template_version: "2018-08-31"
 description: "Kubernetes Cluster from Magnum"
 
 parameters:
-
   ssh_key_name:
     type: string
     description: name of ssh key to be provisioned on our server
@@ -708,4 +707,117 @@ resources:
       server:
         get_attr: [kube_masters, resource.0]
 
+  kube_minions:
+    type: OS::Heat::ResourceGroup
+    depends_on:
+      - network
+    properties:
+      count: {get_param: number_of_minions}
+      removal_policies: [{resource_list: {get_param: minions_to_remove}}]
+      resource_def:
+        type: kubeminion.yaml
+        properties:
+          name:
+            list_join:
+              - '-'
+              - [{ get_param: 'OS::stack_name' }, 'minion', '%index%']
+          prometheus_monitoring: {get_param: prometheus_monitoring}
+          ssh_key_name: {get_param: ssh_key_name}
+          server_image: {get_param: server_image}
+          minion_flavor: {get_param: minion_flavor}
+          fixed_network: {get_attr: [network, fixed_network]}
+          fixed_subnet: {get_attr: [network, fixed_subnet]}
+          network_driver: {get_param: network_driver}
+          flannel_network_cidr: {get_param: flannel_network_cidr}
+          kube_master_ip: {get_attr: [api_address_lb_switch, private_ip]}
+          etcd_server_ip: {get_attr: [etcd_address_lb_switch, private_ip]}
+          external_network: {get_param: external_network}
+          kube_allow_priv: {get_param: kube_allow_priv}
+          docker_volume_size: {get_param: docker_volume_size}
+          docker_volume_type: {get_param: docker_volume_type}
+          docker_storage_driver: {get_param: docker_storage_driver}
+          cgroup_driver: {get_param: cgroup_driver}
+          wait_condition_timeout: {get_param: wait_condition_timeout}
+          registry_enabled: {get_param: registry_enabled}
+          registry_port: {get_param: registry_port}
+          swift_region: {get_param: swift_region}
+          registry_container: {get_param: registry_container}
+          registry_insecure: {get_param: registry_insecure}
+          registry_chunksize: {get_param: registry_chunksize}
+          cluster_uuid: {get_param: cluster_uuid}
+          magnum_url: {get_param: magnum_url}
+          volume_driver: {get_param: volume_driver}
+          region_name: {get_param: region_name}
+          auth_url: {get_param: auth_url}
+          username: {get_param: username}
+          password: {get_param: password}
+          kubernetes_port: {get_param: kubernetes_port}
+          tls_disabled: {get_param: tls_disabled}
+          verify_ca: {get_param: verify_ca}
+          secgroup_kube_minion_id: {get_resource: secgroup_kube_minion}
+          http_proxy: {get_param: http_proxy}
+          https_proxy: {get_param: https_proxy}
+          no_proxy: {get_param: no_proxy}
+          kube_tag: {get_param: kube_tag}
+          kube_version: {get_param: kube_version}
+          flannel_tag: {get_param: flannel_tag}
+          trustee_user_id: {get_param: trustee_user_id}
+          trustee_username: {get_param: trustee_username}
+          trustee_password: {get_param: trustee_password}
+          trustee_domain_id: {get_param: trustee_domain_id}
+          trust_id: {get_param: trust_id}
+          cloud_provider_enabled: {get_param: cloud_provider_enabled}
+          insecure_registry_url: {get_param: insecure_registry_url}
+          container_infra_prefix: {get_param: container_infra_prefix}
+          dns_service_ip: {get_param: dns_service_ip}
+          dns_cluster_domain: {get_param: dns_cluster_domain}
+          openstack_ca: {get_param: openstack_ca}
+          nodes_server_group_id: {get_resource: nodes_server_group}
+          availability_zone: {get_param: availability_zone}
+          pods_network_cidr: {get_param: pods_network_cidr}
+          kubelet_options: {get_param: kubelet_options}
+          kubeproxy_options: {get_param: kubeproxy_options}
+          octavia_enabled: {get_param: octavia_enabled}
+
 outputs:
+  api_address:
+    value:
+      str_replace:
+        template: api_ip_address
+        params:
+          api_ip_address: {get_attr: [api_address_floating_switch, ip_address]}
+    description: >
+      This is the API endpoint of the Kubernetes cluster. Use this to access
+      the Kubernetes API.
+
+  registry_address:
+    value:
+      str_replace:
+        template: localhost:port
+        params:
+          port: {get_param: registry_port}
+    description:
+      This is the url of docker registry server where you can store docker
+      images.
+
+  kube_masters_private:
+    value: {get_attr: [kube_masters, kube_master_ip]}
+    description: >
+      This is a list of the "private" IP addresses of all the Kubernetes masters.
+
+  kube_masters:
+    value: {get_attr: [kube_masters, kube_master_external_ip]}
+    description: >
+      This is a list of the "public" IP addresses of all the Kubernetes masters.
+      Use these IP addresses to log in to the Kubernetes masters via ssh.
+
+  kube_minions_private:
+    value: {get_attr: [kube_minions, kube_minion_ip]}
+    description: >
+      This is a list of the "private" IP addresses of all the Kubernetes minions.
+
+  kube_minions:
+    value: {get_attr: [kube_minions, kube_minion_external_ip]}
+    description: >
+      This is a list of the "public" IP addresses of all the Kubernetes minions.
+      Use these IP addresses to log in to the Kubernetes minions via ssh.
