--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -491,6 +491,12 @@ resources:
       group: ungrouped
       config: {get_file: ../fragments/disable-selinux.sh}
 
+  make_cert_for_master:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/make-cert-for-master.sh}
+
   kube_master_init:
     type: OS::Heat::MultipartMime
     properties:
@@ -498,6 +504,7 @@ resources:
         - config: {get_resource: write_heat_params}
         - config: {get_resource: install_openstack_ca}
         - config: {get_resource: disable_selinux}
+        - config: {get_resource: make_cert_for_master}
 
   kube-master:
     type: OS::Nova::Server
