--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -497,6 +497,18 @@ resources:
       group: ungrouped
       config: {get_file: ../fragments/make-cert-for-master.sh}
 
+  install_kubectl:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/install-kubectl.sh}
+
+  make_kubeconfig_for_master:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/make-kubeconfig-for-master.sh}
+
   kube_master_init:
     type: OS::Heat::MultipartMime
     properties:
@@ -505,6 +517,8 @@ resources:
         - config: {get_resource: install_openstack_ca}
         - config: {get_resource: disable_selinux}
         - config: {get_resource: make_cert_for_master}
+        - config: {get_resource: install_kubectl}
+        - config: {get_resource: make_kubeconfig_for_master}
 
   kube-master:
     type: OS::Nova::Server
