--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -581,18 +581,18 @@ resources:
       volume_id: {get_resource: etcd_volume}
       mountpoint: /dev/vdc
 
-  docker_volume:
-    type: Magnum::Optional::Cinder::Volume
-    properties:
-      size: {get_param: docker_volume_size}
-      volume_type: {get_param: docker_volume_type}
-
-  docker_volume_attach:
-    type: Magnum::Optional::Cinder::VolumeAttachment
-    properties:
-      instance_uuid: {get_resource: kube-master}
-      volume_id: {get_resource: docker_volume}
-      mountpoint: /dev/vdb
+#  docker_volume:
+#    type: Magnum::Optional::Cinder::Volume
+#    properties:
+#      size: {get_param: docker_volume_size}
+#      volume_type: {get_param: docker_volume_type}
+#
+#  docker_volume_attach:
+#    type: Magnum::Optional::Cinder::VolumeAttachment
+#    properties:
+#      instance_uuid: {get_resource: kube-master}
+#      volume_id: {get_resource: docker_volume}
+#      mountpoint: /dev/vdb
 
 outputs:
   OS::stack_id:
