--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
@@ -15,8 +15,8 @@ write_files:
       ENABLE_CINDER="$ENABLE_CINDER"
       ETCD_VOLUME="$ETCD_VOLUME"
       ETCD_VOLUME_SIZE="$ETCD_VOLUME_SIZE"
-      DOCKER_VOLUME="$DOCKER_VOLUME"
-      DOCKER_VOLUME_SIZE="$DOCKER_VOLUME_SIZE"
+#      DOCKER_VOLUME="$DOCKER_VOLUME"
+#      DOCKER_VOLUME_SIZE="$DOCKER_VOLUME_SIZE"
       DOCKER_STORAGE_DRIVER="$DOCKER_STORAGE_DRIVER"
       CGROUP_DRIVER="$CGROUP_DRIVER"
       NETWORK_DRIVER="$NETWORK_DRIVER"
