--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -413,8 +413,8 @@ resources:
             "$KUBE_ALLOW_PRIV": {get_param: kube_allow_priv}
             "$ETCD_VOLUME": {get_resource: etcd_volume}
             "$ETCD_VOLUME_SIZE": {get_param: etcd_volume_size}
-            "$DOCKER_VOLUME": {get_resource: docker_volume}
-            "$DOCKER_VOLUME_SIZE": {get_param: docker_volume_size}
+            #"$DOCKER_VOLUME": {get_resource: docker_volume}
+            #"$DOCKER_VOLUME_SIZE": {get_param: docker_volume_size}
             "$DOCKER_STORAGE_DRIVER": {get_param: docker_storage_driver}
             "$CGROUP_DRIVER": {get_param: cgroup_driver}
             "$NETWORK_DRIVER": {get_param: network_driver}
