--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
@@ -73,3 +73,4 @@ write_files:
       KUBE_SERVICE_ACCOUNT_PRIVATE_KEY="$KUBE_SERVICE_ACCOUNT_PRIVATE_KEY"
       PROMETHEUS_TAG="$PROMETHEUS_TAG"
       GRAFANA_TAG="$GRAFANA_TAG"
+      ENCRYPTION_KEY="$ENCRYPTION_KEY"
