--- a/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
@@ -342,6 +342,34 @@ resources:
             $KUBEPROXY_OPTIONS: {get_param: kubeproxy_options}
             $OCTAVIA_ENABLED: {get_param: octavia_enabled}
 
+  install_openstack_ca:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config:
+        str_replace:
+          params:
+            $OPENSTACK_CA: {get_param: openstack_ca}
+          template: {get_file: ../fragments/install-openstack-ca.sh}
+
+  disable_selinux:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/disable-selinux.sh}
+
+  make_cert_for_minion:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/make-cert-for-minion.sh}
+
+  configure_docker:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/configure-docker.sh}
+
   minion_wc_notify:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -365,8 +393,11 @@ resources:
     properties:
       parts:
         - config: {get_resource: write_heat_params}
+        - config: {get_resource: install_openstack_ca}
+        - config: {get_resource: disable_selinux}
+        - config: {get_resource: make_cert_for_minion}
+        - config: {get_resource: configure_docker}
         - config: {get_resource: minion_wc_notify}
-
   kube-minion:
     type: OS::Nova::Server
     properties:
