--- a/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
@@ -370,6 +370,30 @@ resources:
       group: ungrouped
       config: {get_file: ../fragments/configure-docker.sh}
 
+  configure_docker_registry:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/configure-docker-registry.sh}
+
+  install_kubectl:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/install-kubectl.sh}
+
+  make_kubeconfig_for_minion:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/make-kubeconfig-for-minion.sh}
+      
+  configure_kubernetes_minion:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/configure-kubernetes-minion.sh}
+      
   minion_wc_notify:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -397,6 +421,10 @@ resources:
         - config: {get_resource: disable_selinux}
         - config: {get_resource: make_cert_for_minion}
         - config: {get_resource: configure_docker}
+        - config: {get_resource: configure_docker_registry}
+        - config: {get_resource: install_kubectl}
+        - config: {get_resource: make_kubeconfig_for_minion}
+        - config: {get_resource: configure_kubernetes_minion}
         - config: {get_resource: minion_wc_notify}
   kube-minion:
     type: OS::Nova::Server
