--- a/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
@@ -700,8 +700,9 @@ resources:
         list_join:
           - "\n"
           -
-            - "#!/bin/sh"
-            - "echo SoftwareDeployment test > /root/software-deployment-test"
+            - get_file: ../fragments/kube-apiserver-to-kubelet-role.sh
+            - get_file: ../fragments/configure-cni.sh
+            - get_file: ../fragments/configure-coredns.sh
 
   kube_cluster_deploy:
     type: OS::Heat::SoftwareDeployment
