--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
@@ -15,6 +15,9 @@ write_files:
       ENABLE_CINDER="$ENABLE_CINDER"
       ETCD_VOLUME="$ETCD_VOLUME"
       ETCD_VOLUME_SIZE="$ETCD_VOLUME_SIZE"
+      DOCKER_VOLUME="$DOCKER_VOLUME"
+      DOCKER_VOLUME_SIZE="$DOCKER_VOLUME_SIZE"
+      DOCKER_STORAGE_DRIVER="$DOCKER_STORAGE_DRIVER"
       CGROUP_DRIVER="$CGROUP_DRIVER"
       NETWORK_DRIVER="$NETWORK_DRIVER"
       FLANNEL_NETWORK_CIDR="$FLANNEL_NETWORK_CIDR"
@@ -74,3 +77,4 @@ write_files:
       PROMETHEUS_TAG="$PROMETHEUS_TAG"
       GRAFANA_TAG="$GRAFANA_TAG"
       ENCRYPTION_KEY="$ENCRYPTION_KEY"
+      WAIT_CURL="$WAIT_CURL"
