--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
@@ -12,7 +12,6 @@ write_files:
       KUBE_NODE_PUBLIC_IP="$KUBE_NODE_PUBLIC_IP"
       KUBE_NODE_IP="$KUBE_NODE_IP"
       KUBE_ALLOW_PRIV="$KUBE_ALLOW_PRIV"
-      ENABLE_CINDER="$ENABLE_CINDER"
       ETCD_VOLUME="$ETCD_VOLUME"
       ETCD_VOLUME_SIZE="$ETCD_VOLUME_SIZE"
       DOCKER_VOLUME="$DOCKER_VOLUME"
@@ -78,3 +77,4 @@ write_files:
       GRAFANA_TAG="$GRAFANA_TAG"
       ENCRYPTION_KEY="$ENCRYPTION_KEY"
       WAIT_CURL="$WAIT_CURL"
+      IS_MASTER="true"
