--- a/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
@@ -392,7 +392,19 @@ resources:
     type: OS::Heat::SoftwareConfig
     properties:
       group: ungrouped
-      config: {get_file: ../fragments/wc-notify.sh}
+      config:
+        str_replace:
+          template: |
+            #!/bin/bash -v
+            if [ "verify_ca" == "True" ]; then
+                VERIFY_CA=""
+            else
+                VERIFY_CA="-k"
+            fi
+            wc_notify $VERIFY_CA --data-binary '{"status": "SUCCESS"}'
+          params:
+            wc_notify: {get_attr: [minion_wait_handle, curl_cli]}
+            verify_ca: {get_param: verify_ca}
 
   kube_minion_init:
     type: OS::Heat::MultipartMime
