--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params.yaml
@@ -41,6 +41,7 @@ write_files:
       FLANNEL_NETWORK_CIDR="$FLANNEL_NETWORK_CIDR"
       PODS_NETWORK_CIDR="$PODS_NETWORK_CIDR"
       KUBE_VERSION="$KUBE_VERSION"
+      TRUSTEE_DOMAIN_ID="$TRUSTEE_DOMAIN_ID"
       TRUSTEE_USER_ID="$TRUSTEE_USER_ID"
       TRUSTEE_PASSWORD="$TRUSTEE_PASSWORD"
       TRUST_ID="$TRUST_ID"
