--- a/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubeminion.yaml
@@ -331,6 +331,7 @@ resources:
             $WAIT_CURL: {get_attr: [minion_wait_handle, curl_cli]}
             $TRUSTEE_DOMAIN_ID: {get_param: trustee_domain_id}
             $TRUSTEE_USER_ID: {get_param: trustee_user_id}
+            $TRUSTEE_USERNAME: {get_param: trustee_username}
             $TRUSTEE_PASSWORD: {get_param: trustee_password}
             $TRUST_ID: {get_param: trust_id}
             $AUTH_URL: {get_param: auth_url}
