add kernel params

--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -573,6 +573,12 @@ resources:
       group: ungrouped
       config: {get_file: ../fragments/configure-kubernetes-minion.sh}
 
+  configure_kernel_params:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/configure-kernel-params.sh}
+
   master_wc_notify:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -609,6 +615,7 @@ resources:
         - config: {get_resource: configure_docker}
         - config: {get_resource: make_kubeconfig_for_minion}
         - config: {get_resource: configure_kubernetes_minion}
+        - config: {get_resource: configure_kernel_params}
         - config: {get_resource: master_wc_notify}
 
   kube-master:
